2011-10-02  Karl Berry  <karl@tug.org>

	* TeXLive: new subdir for TL*.pm copies to be used by tests.

2010-04-11  Karl Berry  <karl@tug.org>

	* common-test.pl (AFMFONTS): set also.

2010-03-08  Karl Berry  <karl@tug.org>

	* texmf/: new subdir.
	* common-test.pl (BSTINPUTS, et al.): search it.
	 (test_file_copy): new fn.